fix: added the gap class to moonstone tablecell

--- a/src/components/DataTable/cells/TableCell.scss
+++ b/src/components/DataTable/cells/TableCell.scss
@@ -24,6 +24,7 @@
 .moonstone-TableCell {
     padding-right: var(--spacing-medium);
     padding-left: var(--spacing-medium);
+    gap: var(--spacing-nano);
 
     overflow-y: auto;
 
